# roe

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
packaging/npm/: prepare.js
packaging/npm/roe-cli/: README.md  package.json
packaging/nuget/: Program.cs  README.md  Roe.Tool.csproj
src/: analyze.rs  cli.rs  clone_extraction.rs  config.rs  entry_points.rs  graph.rs  lib.rs  main.rs  paths.rs  resolve.rs  rules.rs  suffix_array.rs  suppress.rs  tokenize.rs
src/commands/: dead_code.rs  dupes.rs  mod.rs
src/discover/: csproj.rs  mod.rs  sln.rs  sources.rs  walk.rs
src/extract/: mod.rs  walk.rs
src/model/: dupes.rs  findings.rs  ids.rs  mod.rs  project.rs  symbols.rs
src/report/: human.rs  json.rs  mod.rs
src/report/dupes/: human.rs  json.rs  mod.rs
tests/: cli.rs  dead_code.rs  dupes.rs
tests/fixtures/bare_dir/: Dead.cs  Program.cs  Used.cs
tests/fixtures/config_aggressive/: Program.cs  roe.json
tests/fixtures/config_ignore_json/: Program.cs  StillDead.cs  roe.json
tests/fixtures/config_ignore_yaml/: Program.cs  StillDead.cs  roe.yaml
tests/fixtures/config_nested/: roe.json
tests/fixtures/console_app/: ConsoleApp.sln
tests/fixtures/dupes_below_threshold/: PriceCalculator.cs  QuoteCalculator.cs
tests/fixtures/inline_suppress/: Helper.cs  (+3 more)
tests/snapshots/: cli__dupes_human_exact_clone.snap  cli__dupes_human_exact_clone_no_code.snap  cli__dupes_json_exact_clone.snap  cli__human_console_app.snap  cli__json_console_app.snap
(+55 files in other folders)
