[package]
name = "roe"
version = "1.0.2"
edition = "2024"
description = "Codebase intelligence for C# — dead code and duplicate detection"
license = "MIT"
repository = "https://github.com/Artmann/roe"
keywords = ["csharp", "dead-code", "duplicates", "static-analysis"]
categories = ["command-line-utilities", "development-tools"]

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"

[dependencies]
anyhow = "1.0.104"
bitflags = "2.13.1"
clap = { version = "4.6.3", features = ["derive"] }
colored = "3.1.1"
dunce = "1.0.5"
fixedbitset = "0.5.7"
globset = "0.4.19"
ignore = "0.4.31"
lasso = { version = "0.7.3", features = ["multi-threaded"] }
rayon = "1.12.0"
roxmltree = "0.21.1"
rustc-hash = "2.1.3"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
serde_yaml_ng = "0.10.0"
smallvec = "1.15.2"
tree-sitter = "0.26.11"
tree-sitter-c-sharp = "0.23.5"

[dev-dependencies]
assert_cmd = "2.2.2"
insta = { version = "1.48.0", features = ["json"] }
predicates = "3.1.4"
regex = "1.13.1"
